--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -4,6 +4,6 @@
 db_host = False
 db_port = False
 db_user = odoo
-db_password = False
+db_password = 1150191
 addons_path = addons,C:/ctp/tutorials
 default_productivity_apps = True
